# rtp-engine

./: .gitignore  .mailmap  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  setup.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: device.rs  error.rs  jitter.rs  lib.rs  recorder.rs  resample.rs  session.rs  srtp.rs  stun.rs
src/codec/: g711.rs  g729.rs  mod.rs  opus_codec.rs
src/rtp/: header.rs  mod.rs  rtcp.rs  stats.rs
